apps/consignment-app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: app
          image: ghcr.io/kevindurb/consignment-app:v0.5.1
          envFrom: []
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              memory: 64M
            limits:
              memory: 256M
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funnel-ingress
  annotations:
    tailscale.com/tags: tag:k8s,tag:apps
    tailscale.com/funnel: 'true'
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [consignment]
